worked on overflow issue.

--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -204,6 +204,7 @@
     left: 0;
     right: 0;
     bottom: 0;
+    margin: 0;
   }
 
   .modal__close-btn {
